Fix remove button placement on iOs

--- a/public/less/dropdown-selector.less
+++ b/public/less/dropdown-selector.less
@@ -21,6 +21,8 @@
 
   .lg-btn-remove {
     background: none;
+    box-sizing: content-box;
+    line-height: 1em;
 
     position: absolute;
     top: 9px;
